Developed the interface and need to repair responsive breakpoints and repair why is not working on Iphones

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,68 +7,149 @@ body{
     width:100vw;
     height: 100vh;
     max-width:100vw;
+    max-height:100%;
+
+    background-color: #425C5A;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #nav{
-    background-color:#13333a;
-
     display: flex;
     flex-direction: row;
     justify-content:space-around;
     align-items: center;
 
-    height:10%;
+    height:auto;
     width: 100%;
+}
+
+#LOGO{
+    height:90px;
 }
 
 #InputSearcher{
     width: 50%;
     height: 50%;
-
+    font-size: 20px;
+    
     padding:5px 0px 5px 25px;
     
-    border-radius: 10px;
-    border:1px solid #FFFFFF;
+    border-bottom:1px solid #627b78;
+    border-top:none;
+    border-right: none;
+    border-left: none;
     
-    background-color:#13333a;
+    background-color: #425C5A;
     color:#FFFFFF;
+
+    font-family: 'Prompt';
+}
+
+#Selects{
+    margin:0px 3% 0px 0px;
+}
+
+#SearcherGroup{
+    width: 60%;
+
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+}
+
+#SelectCities{
+    background-color: #ffcea1;
+    color:#425C5A;
+
+    border:0px solid;
+    border-radius:7px;
+
+    font-size: 13px;
+    font-weight: bolder;
+
+    padding:15px 15px;
+
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none; /* Remove estilo padrão do FireFox*/   
+}
+
+#SelectStates{
+    background-color: #ffcea1;
+    color:#425C5A;
+
+    border:0px solid;
+    border-radius:7px;
+
+    font-size: 13px;
+    font-weight: bolder;
+
+    padding:15px 15px;
+    -webkit-appearance: none; 
+    -moz-appearance: none; 
+    appearance: none; /* Remove estilo padrão do FireFox*/ 
 }
 
 #ButtonSearcher{
-    background-color:transparent;
-    color:#FFFFFF;
-    border: 1px solid #FFFFFF;
+    background-color:#ffcea1;
+    color:#425C5A;
+    border:0px solid;
 
-    padding:12px 20px;
+    padding:15px 30px;
     
-    border-radius: 5px;
+    border-radius: 40px;
 
     font-weight:bolder;
+    margin-top: 10px;
+
+    margin-top: 1.5%;
 }
 
 #ButtonSearcher:hover{
-    background-color: #FFFFFF;
+    background-color: #5c7775;
     color:#13333a;
 
 }
 
 #InformationsShow{
-    height: 90%;
-    width: 99%;
+    height: 70%;
+    width:85%;
 
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content:space-around;
+    align-items:center;
+    justify-content:flex-start;
+
+    margin-top:3%;
+
+    border-radius: 20px;
+
+    background-color: #FFFFFF;
 }
 
+.SingleData{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    width:70%;
+}
+
+.SingleData > button{
+    display: none;
+}
 #LOADING{
     width: 240px;
     height: 400px;
 }
+
 /*Media queries to responsive interface*/
 
-@media(min-width:100px) and (max-width:500px){
+@media(max-width:450px){
     #nav{
         width: 100vw;
         height: 10%;
